Add brand- wrapper, logo and footer components.
Update home-page and page-wrapper

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -16,15 +16,30 @@
   /* Layer */
   --app-inner-space: 0;
   --page-height: 100vh;
+  --container-width: 100%;
+  --container-inner-space: var(--basic-double);
   --header-layout: flex;
   --header-gap: var(--basic);
   --header-inner-space: var(--basic) 0;
+  --header-justify-content: space-between;
+  --footer-layout: flex;
+  --footer-layout-direction: column;
+  --footer-gap: var(--basic);
+  --footer-inner-space: var(--basic) 0;
+  --footer-justify-content: center;
+  --footer-align-items: center;
+  --footer-copyright-text-size: 0.75em;
+  --brand-layout: flex;
+  --brand-gap: var(--basic);
+  --brand-items-align: center;
+  --brand-logo-size: 36px;
+  --brand-logo-stroke: var(--color-secondary);
   --nav-layout: flex;
   --nav-gap: var(--basic);
   --nav-justify: initial;
   --nav-direction: column;
-  --container-width: 100%;
-  --container-inner-space: var(--basic-double);
+  --nav-link-color: var(--color-secondary);
+  --nav-link-decoration: none;
   --main-border: var(--basic-border-width) solid var(--basic-border-color);
   --main-layout: initial;
   --main-inner-space: var(--basic);
